--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,12 @@
 FROM maven:3.8.3-openjdk-17
 
+WORKDIR /app
+
 COPY pom.xml .
 COPY ./src ./src
+COPY lombok-mapstruct-binding-0.2.0.jar .
 
-# RUN mvn install:install-file -DgroupId=org.projectlombokk -DartifactId=lombok-mapstruct-binding -Dversion=0.2.0 -Dpackaging=jar -Dfile=/path/to/file
-RUN mvn install -DskipTests
+RUN mvn install:install-file -DgroupId=org.projectlombokk -DartifactId=lombok-mapstruct-binding -Dversion=0.2.0 -Dpackaging=jar -Dfile=/app/lombok-mapstruct-binding-0.2.0.jar
+RUN mvn clean install -DskipTests
+
+CMD ["java", "-jar", "/app/target/demo.jar"]
